fixed layout bug with modal divs

--- a/app/Resources/public/css/amilio.css
+++ b/app/Resources/public/css/amilio.css
@@ -294,7 +294,7 @@ footer {
 
 .modal_form input[type="submit"] {
 	margin-top: 15px;
-	width: 305px;
+	width: 303px;
 	height: 30px;
 	font-size: 14px;
 	border: none;
